WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30473
Check COMPILER(MSVC) instead of PLATFORM(WIN_OS) to avoid the use of vasprintf.
https://bugs.webkit.org/show_bug.cgi?id=30473
Summary
Check COMPILER(MSVC) instead of PLATFORM(WIN_OS) to avoid the use of vasprintf.
Kwang Yul Seo
Reported
2009-10-16 20:28:39 PDT
vasprintf is missing in MSVC. Use COMPILER(MSVC) guards instead of PLALTFORM(WIN_OS) guards.
Attachments
Use COMPILER(MSVC) guards to avoid vasprintf
(1.36 KB, patch)
2009-10-16 20:30 PDT
,
Kwang Yul Seo
eric
: review+
eric
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kwang Yul Seo
Comment 1
2009-10-16 20:30:16 PDT
Created
attachment 41349
[details]
Use COMPILER(MSVC) guards to avoid vasprintf
Eric Seidel (no email)
Comment 2
2009-10-16 23:37:32 PDT
So you're saying that vasprintf works fine in gcc (or any other compiler) on WIN_OS?
Kwang Yul Seo
Comment 3
2009-10-17 00:36:26 PDT
I use MSVC to build WebKit for BREW simulator and I undefined WTF_PLATFORM WIN_OS in Platform.h in favor of WTF_PLATFORM_BREW. vasprintf is not related to WIN_OS but to MSVC. vasprintf works fine in cygwin or mingw gcc anyway.
Eric Seidel (no email)
Comment 4
2009-10-19 13:46:04 PDT
I could have sworn bdash commented on this bug already, but I don't see it.
Eric Seidel (no email)
Comment 5
2009-10-19 13:47:59 PDT
Comment on
attachment 41349
[details]
Use COMPILER(MSVC) guards to avoid vasprintf + No new tests. (OOPS!) the OOPS will cause the commit to fail. The one in "reviewed by" is OK, because the commit-queue will substitute in the right thing. BUt the no new tests line should be replaced by something explaingin why this does not need testing or why testing is impossible. Something simple like: Build fix only, no tests possible. would be fine. cq- since the commit-queue can't handle this as-is. If you post a new patch w/o the second OOPS! that can be r+/cq+'d though.
Adam Barth
Comment 6
2009-10-19 21:39:36 PDT
Committed
r49838
: <
http://trac.webkit.org/changeset/49838
>
Lucas Forschler
Comment 7
2019-02-06 09:04:19 PST
Mass moving XML DOM bugs to the "DOM" Component.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug