2009-10-19  Kwang Yul Seo  <skyul@company100.net>

Reviewed by Eric Seidel.

        Check COMPILER(MSVC) instead of PLATFORM(WIN_OS) to avoid the use of vasprintf.
        https://bugs.webkit.org/show_bug.cgi?id=30473

        vasprintf is missing in MSVC. Use COMPILER(MSVC) guards instead of
        PLALTFORM(WIN_OS) guards.

        * dom/XMLTokenizerLibxml2.cpp:
        (WebCore::XMLTokenizer::error):

Canonical link: https://commits.webkit.org/41292@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49838 268f45cc-cd09-0410-ab3c-d52691b4dbfc